# telora

./: CONTRIBUTING.md  Cargo.toml  Containerfile  Makefile  README.md  TODO.md
.github/workflows/: ci.yml
pkg/: PKGBUILD
scripts/: build
scripts/compatibility/: simulate.sh  verify.sh
systemd/: telora-daemon.service  telora.service
telora-ctl/: Cargo.toml
telora-ctl/src/: main.rs
telora-daemon/src/: main.rs  transcriber.rs
telora-gui/: Cargo.toml
telora-gui/src/: connection.rs  input.rs  main.rs  ui.rs
telora-models/: Cargo.toml
