[workspace]
resolver = "2"
members = ["telora-daemon", "telora-gui", "telora-ctl", "telora-models"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
