[package]
name = "telora-gui"
version.workspace = true
edition.workspace = true

[dependencies]
gtk4 = "0.10"
gtk4-layer-shell = { version = "0.7", features = ["v1_3"] }
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-channel = "2.2"
