[package]
name = "telora-models"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
dirs = "5.0"
futures-util = "0.3"
indicatif = "0.17"
reqwest = { version = "0.11", default-features = false, features = ["stream", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
log = "0.4"
env_logger = "0.11"